Thu May 13 18:15:33 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* io.c (swallow): should use more_char() instead of fill_cbuf().
	  suggested by akr.

Thu May 13 17:56:07 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/io/console/console.c (console_set_echo, console_echo_p): use
	  primary fd.  [ruby-dev:41309]

Thu May 13 13:30:05 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* marshal.c (w_float): use minimal representation.

	* numeric.c (ruby_dbl2cstr): split from rb_float_new.

Thu May 13 13:09:24 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_core.h (rb_vm_get_sourceline): moved from eval_intern.h for
	  vm_dump.c.

Thu May 13 12:53:13 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* io.c (swallow): support text mode and UTF-16/32 as internal encoding.
	  [Bug #1576]

	* io.c (io_shift_cbuf): read and throw it away when str is NULL.

Thu May 13 09:45:27 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/Makefile.sub: link with ffs.obj.

Thu May 13 07:37:49 2010  Tanaka Akira  <akr@fsij.org>

	* ext/sdbm/_sdbm.c: include unistd.h before sdbm.h for off_t.
	  fix compilation problem on FreeBSD 6.4.

Wed May 12 23:48:37 2010  Tanaka Akira  <akr@fsij.org>

	* include/ruby/intern.h (rb_quad_pack): deprecated.
	  (rb_quad_unpack): ditto.

Wed May 12 22:22:05 2010  Tanaka Akira  <akr@fsij.org>

	* time.c (rb_big_abs_find_minbit): use ffs().

	* configure.in: check ffs().

	* missing/ffs.c: new file.

	* include/ruby/missing.h (ffs): declared.

Wed May 12 16:43:12 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* numeric.c (flo_to_s): fixed broken output including nuls.

Wed May 12 16:25:46 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* numeric.c (flo_to_s): exponent needs 2 digits.

Wed May 12 16:02:43 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* numeric.c (flo_to_s): fill lower zeros.

Wed May 12 15:45:36 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* lib/rdoc/generator/ri.rb (generate): should load existing cache
	  before generating it.
