@@ -1,3 +1,8 @@
+Thu May 13 18:45:25 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* ext/io/console/console.c (get_write_fd): return primary fd if no
+	  io is tied for writing.
+
 Thu May 13 18:15:33 2010  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* io.c (swallow): should use more_char() instead of fill_cbuf().
